moved scripts to their own file dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -282,412 +282,6 @@
   <!-- ==========================
        JAVASCRIPT SECTION
        ========================== -->
-  <script>
-// Load Google Charts and bootstrap the dashboard
-google.charts.load("current", {packages:["corechart"]});
-google.charts.setOnLoadCallback(initDashboard);
-
-// === CONFIG: SHEET + ORIGINAL GRAVITY ===
-const SHEET_ID = "1cV8POWA9l0hlAyZPB1RYLYaqa4T4pXIRzQ3e6C9qkE8";
-const OG = 1.086;
-
-// Tabs we read from the spreadsheet
-const DATASETS = [
-  { sheet: "Black Corn", key: "black" },
-  { sheet: "Green Corn", key: "green" }
-];
-
-// ==========================
-//  TIME FORMAT FOR TOOLTIP
-// ==========================
-function formatTimeForTooltip(d) {
-  return d.toLocaleString("en-US", {
-    hour: "2-digit",
-    minute: "2-digit",
-    hour12: true,
-    timeZone: "America/Chicago"
-  });
-}
-
-// ==========================
-//  INIT & REFRESH LOOP
-// ==========================
-function initDashboard() {
-  // Handle range dropdown
-  document.getElementById("rangeSelect").addEventListener("change", () => {
-    updateRangeLabel();
-    updateDashboard();
-  });
-
-  updateRangeLabel();
-  updateDashboard();
-
-  // Auto-refresh every 20s
-  setInterval(updateDashboard, 20000);
-}
-
-function getRangeDays() {
-  return parseInt(document.getElementById("rangeSelect").value || "1", 10);
-}
-
-function updateRangeLabel() {
-  const days = getRangeDays();
-  document.getElementById("rangeLabel").textContent =
-    days === 1 ? "Today" : `Last ${days} days`;
-}
-
-function updateDashboard() {
-  // Load both sheets (Black + Green) in parallel
-  Promise.all(DATASETS.map(ds => loadSheet(ds.sheet)))
-    .then(res => {
-      let obj = {};
-      DATASETS.forEach((ds, i) => obj[ds.sheet] = res[i]);
-      updateTiles(obj);
-      drawCharts(obj);  // <- draw all charts (mobile + desktop)
-    });
-}
-
-// ==========================
-//  GOOGLE SHEETS LOADER
-// ==========================
-function loadSheet(sheet) {
-  const q = "select A,B,C where A is not null order by A";
-  const url =
-    `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${encodeURIComponent(sheet)}&tq=${encodeURIComponent(q)}`;
-
-  return fetch(url)
-    .then(r => r.text())
-    .then(t => JSON.parse(t.substr(47).slice(0, -2)).table);
-}
-
-// ==========================
-//  TIMESTAMP HELPERS
-// ==========================
-function toDate(raw) {
-  if (!raw) return new Date();
-
-  if (typeof raw === "object") {
-    if ("v" in raw) raw = raw.v;
-    else if ("f" in raw) raw = raw.f;
-  }
-
-  // Google "Date(YYYY,MM,DD,HH,mm,ss)" style
-  if (typeof raw === "string" && raw.includes("Date(")) {
-    const p = raw.replace("Date(", "").replace(")", "").split(",").map(Number);
-    return new Date(p[0], p[1], p[2], p[3], p[4], p[5]);
-  }
-
-  // Serial number style (Excel/Sheets)
-  if (typeof raw === "number") {
-    const base = new Date(Date.UTC(1899, 11, 30));
-    return new Date(base.getTime() + raw * 86400000);
-  }
-
-  // Normal ISO/string date fallback
-  const d = new Date(raw);
-  return isNaN(d.getTime()) ? new Date() : d;
-}
-
-function parseTS(raw) {
-  const d = toDate(raw);
-  return d.toLocaleString("en-US", {
-    month: "short", day: "2-digit", year: "numeric",
-    hour: "2-digit", minute: "2-digit",
-    hour12: true, timeZone: "America/Chicago"
-  });
-}
-
-// ==========================
-//  ABV CALC FROM OG & SG
-// ==========================
-function calcABV(sg) {
-  if (!sg || sg <= 0) return null;
-  return (OG - sg) * 131.25;
-}
-
-// ==========================
-//  TILE / STATUS UPDATES
-// ==========================
-function updateTiles(data) {
-  updateTile(data["Black Corn"], "black");
-  updateTile(data["Green Corn"], "green");
-}
-
-function updateTile(table, key) {
-  const s = id => document.getElementById(id);
-
-  if (!table || !table.rows.length) {
-    setOffline(key);
-    return;
-  }
-
-  // Find latest row that has all three values (A,B,C)
-  let row = null;
-  for (let i = table.rows.length - 1; i >= 0; i--) {
-    const c = table.rows[i].c;
-    if (c && c[0] && c[1] && c[2]) { row = c; break; }
-  }
-  if (!row) return setOffline(key);
-
-  const ts = row[0].v;
-  const temp = Number(row[1].v);
-  const sg = Number(row[2].v);
-
-  s(`${key}Temp`).innerHTML = `${temp.toFixed(1)}<small>°F</small>`;
-  s(`${key}Gravity`).innerHTML = `${sg.toFixed(3)}<small>SG</small>`;
-  s(`${key}Updated`).textContent = "Last update: " + parseTS(ts);
-
-  const abv = calcABV(sg);
-  s(`${key}ABV`).innerHTML = abv ? `${abv.toFixed(2)}<small>%</small>` : `--<small>%</small>`;
-
-  s(`${key}Status`).textContent = "Online";
-  s(`${key}Status`).classList.add("online");
-  s(`${key}Status`).classList.remove("offline");
-}
-
-function setOffline(key) {
-  const s = id => document.getElementById(id);
-  s(`${key}Status`).textContent = "Offline";
-  s(`${key}Status`).classList.remove("online");
-  s(`${key}Status`).classList.add("offline");
-  s(`${key}Temp`).innerHTML = `--<small>°F</small>`;
-  s(`${key}Gravity`).innerHTML = `--<small>SG</small>`;
-  s(`${key}ABV`).innerHTML = `--<small>%</small>`;
-  s(`${key}Updated`).textContent = "Last update: --";
-}
-
-// ==========================
-//  CHART DATA PREP HELPERS
-//  (now returns time, gravity, temp)
-// ==========================
-function extractSeries(table) {
-  const out = [];
-  if (!table || !table.rows) return out;
-
-  table.rows.forEach(r => {
-    const c = r.c;
-    if (c && c[0] && c[1] && c[2]) {
-      const d = toDate(c[0].v);
-      const temp = Number(c[1].v);
-      const sg   = Number(c[2].v);
-      if (!isNaN(sg) && !isNaN(temp)) {
-        out.push({ time: d, gravity: sg, temp: temp });
-      }
-    }
-  });
-
-  return out;
-}
-
-// ==========================
-//  DRAW ALL CHARTS (MOBILE + DESKTOP)
-// ==========================
-function drawCharts(d) {
-  const days = getRangeDays();
-  const now = new Date();
-  const cutoff = now.getTime() - days * 86400000;
-
-  const black = extractSeries(d["Black Corn"]).filter(p => p.time.getTime() >= cutoff);
-  const green = extractSeries(d["Green Corn"]).filter(p => p.time.getTime() >= cutoff);
-
-  // MOBILE combined chart
-  drawCombinedChart(black, green);
-
-  // DESKTOP individual charts
-  drawSingleChart(black, "chart_black", "Black Corn", "#d8843e");
-  drawSingleChart(green, "chart_green", "Green Corn", "#00c9a7");
-}
-
-// ==========================
-//  MOBILE COMBINED CHART
-//  (Black + Green on same chart)
-//  Tooltips show SG + Temp + Time
-// ==========================
-function drawCombinedChart(black, green) {
-  const map = new Map();
-
-  function add(series, key) {
-    series.forEach(p => {
-      const k = p.time.toISOString();
-      if (!map.has(k)) {
-        map.set(k, {
-          time: p.time,
-          blackGravity: null,
-          blackTemp: null,
-          greenGravity: null,
-          greenTemp: null
-        });
-      }
-      const row = map.get(k);
-      if (key === "black") {
-        row.blackGravity = p.gravity;
-        row.blackTemp = p.temp;
-      } else if (key === "green") {
-        row.greenGravity = p.gravity;
-        row.greenTemp = p.temp;
-      }
-    });
-  }
-
-  add(black, "black");
-  add(green, "green");
-
-  const merged = Array.from(map.values()).sort((a, b) => a.time - b.time);
-
-  // Thin data if needed
-  if (merged.length > 200) merged.splice(0, merged.length - 200);
-
-  if (!merged.length) {
-    document.getElementById("gravity_chart").innerHTML =
-      "<div style='color:#9aa4b2; padding-top:40px;'>No data in selected range.</div>";
-    return;
-  }
-
-  const data = new google.visualization.DataTable();
-  data.addColumn("datetime", "Time");
-  data.addColumn("number", "Black Corn");
-  data.addColumn({ type: "string", role: "tooltip" });
-  data.addColumn("number", "Green Corn");
-  data.addColumn({ type: "string", role: "tooltip" });
-
-  merged.forEach(p => {
-    const blackTooltip =
-      p.blackGravity != null && p.blackTemp != null
-        ? `SG: ${p.blackGravity.toFixed(3)}\nTemp: ${p.blackTemp.toFixed(1)}°F\n${formatTimeForTooltip(p.time)}`
-        : null;
-
-    const greenTooltip =
-      p.greenGravity != null && p.greenTemp != null
-        ? `SG: ${p.greenGravity.toFixed(3)}\nTemp: ${p.greenTemp.toFixed(1)}°F\n${formatTimeForTooltip(p.time)}`
-        : null;
-
-    data.addRow([
-      p.time,
-      p.blackGravity,
-      blackTooltip,
-      p.greenGravity,
-      greenTooltip
-    ]);
-  });
-
-  // X-axis ticks (hourly)
-  const ticks = [];
-  let t = new Date(merged[0].time);
-  t.setMinutes(0, 0, 0);
-  const end = merged[merged.length - 1].time;
-  while (t <= end) {
-    ticks.push(new Date(t));
-    t.setHours(t.getHours() + 1);
-  }
-
-  // Y-axis: min = 1.000, max = maxSG + 0.005
-  const allVals = [];
-  merged.forEach(p => {
-    if (typeof p.blackGravity === "number") allVals.push(p.blackGravity);
-    if (typeof p.greenGravity === "number") allVals.push(p.greenGravity);
-  });
-  let maxVal = allVals.length ? Math.max(...allVals) : 1.02;
-  let yMin = 1.000;
-  let yMax = maxVal + 0.005;
-  if (yMax < yMin + 0.01) yMax = yMin + 0.01;
-
-  const options = {
-    backgroundColor: "transparent",
-    legend: { position: "bottom", textStyle: { color: "#cfd8e3" } },
-    curveType: "function",
-    hAxis: {
-      textStyle: { color: "#9aa4b2" },
-      gridlines: { color: "#1e2530" },
-      ticks: ticks,
-      format: "h a"
-    },
-    vAxis: {
-      textStyle: { color: "#9aa4b2" },
-      gridlines: { color: "#1e2530" },
-      viewWindowMode: "explicit",
-      viewWindow: { min: yMin, max: yMax }
-    },
-    chartArea: { left: 60, top: 20, right: 30, bottom: 70 },
-    series: {
-      0: { color: "#d8843e", width: 3 },
-      1: { color: "#00c9a7", width: 3 }
-    }
-  };
-
-  new google.visualization.LineChart(
-    document.getElementById("gravity_chart")
-  ).draw(data, options);
-}
-
-// ==========================
-//  DESKTOP SINGLE-BATCH CHART
-//  (used for Black and Green panels)
-//  Tooltips show SG + Temp + Time
-// ==========================
-function drawSingleChart(series, containerId, label, color) {
-  const container = document.getElementById(containerId);
-  if (!container) return;
-
-  if (!series.length) {
-    container.innerHTML =
-      "<div style='color:#9aa4b2; padding-top:40px;'>No data in selected range.</div>";
-    return;
-  }
-
-  // Thin if crazy long
-  const points = series.slice(-200);
-
-  const data = new google.visualization.DataTable();
-  data.addColumn("datetime", "Time");
-  data.addColumn("number", label);
-  data.addColumn({ type: "string", role: "tooltip" });
-
-  points.forEach(p => {
-    const tooltip = `SG: ${p.gravity.toFixed(3)}\nTemp: ${p.temp.toFixed(1)}°F\n${formatTimeForTooltip(p.time)}`;
-    data.addRow([p.time, p.gravity, tooltip]);
-  });
-
-  // Hourly ticks
-  const ticks = [];
-  let t = new Date(points[0].time);
-  t.setMinutes(0, 0, 0);
-  const end = points[points.length - 1].time;
-  while (t <= end) {
-    ticks.push(new Date(t));
-    t.setHours(t.getHours() + 1);
-  }
-
-  // Y-axis range for this batch only
-  const vals = points.map(p => p.gravity);
-  let maxVal = Math.max(...vals);
-  let yMin = 1.000;
-  let yMax = maxVal + 0.005;
-  if (yMax < yMin + 0.01) yMax = yMin + 0.01;
-
-  const options = {
-    backgroundColor: "transparent",
-    legend: { position: "none" },
-    curveType: "function",
-    hAxis: {
-      textStyle: { color: "#9aa4b2", fontSize: 10 },
-      gridlines: { color: "#1e2530" },
-      ticks: ticks,
-      format: "h a"
-    },
-    vAxis: {
-      textStyle: { color: "#9aa4b2", fontSize: 10 },
-      gridlines: { color: "#1e2530" },
-      viewWindowMode: "explicit",
-      viewWindow: { min: yMin, max: yMax }
-    },
-    chartArea: { left: 45, top: 15, right: 10, bottom: 45 },
-    series: {
-      0: { color: color, width: 3 }
-    }
-  };
-
-  new google.visualization.LineChart(container).draw(data, options);
-}
-</script>
+<script src="dashboard.js?v=1"></script>
 </body>
 </html>
