--- a/barrel-dashboard.html
+++ b/barrel-dashboard.html
@@ -203,7 +203,7 @@
 
   <div id="tooltip" class="tooltip"></div>
 
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
   <script src="barrel-dashboard.js"></script>
 </body>
 </html>
