--- a/barrel-dashboard.html
+++ b/barrel-dashboard.html
@@ -167,7 +167,7 @@
 <body>
 
   <!-- ⭐ LOGO THAT DOESN’T PUSH CONTENT DOWN -->
-  <img src="YOUR_LOGO_FILENAME.png" class="logo-fixed" alt="797 Distillery Logo">
+  <img src="websiteLogoGlassWhiteTrans.png" class="logo-fixed" alt="797 Distillery Logo">
 
   <div class="container">
     <h1>797 Distillery Barrel Dashboard</h1>
