--- a/barrel-dashboard.html
+++ b/barrel-dashboard.html
@@ -187,10 +187,17 @@
   <img src="websiteLogoGlassWhiteTrans.png" class="logo-fixed" alt="797 Distillery Logo">
 
   <div class="container">
-    <h1>797 Distillery Barrel Dashboard</h1>
-    <div class="subheading">
-      Live view of all barrels from your Google Sheet (Barrel Log).
+    <div class="header-row">
+    <div>
+      <h1>797 Distillery Barrel Dashboard</h1>
+      <div class="subheading">
+        Live view of all barrels from your Google Sheet (Barrel Log).
+      </div>
     </div>
+
+    <img src="websiteLogoGlassWhiteTrans.png" class="header-logo" alt="797 Distillery Logo">
+  </div>
+
 
     <div class="stats-grid">
       <div class="stat-card">
